Refine swagger file
